feat: add GET _/info on swagger
