# authclient/model_get_server_info_200_response.go
@@ -1,0 +1,127 @@
+/*
+Auth API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: AUTH_VERSION
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package authclient
+
+import (
+	"encoding/json"
+)
+
+// checks if the GetServerInfo200Response type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &GetServerInfo200Response{}
+
+// GetServerInfo200Response struct for GetServerInfo200Response
+type GetServerInfo200Response struct {
+	Version interface{} `json:"version,omitempty"`
+}
+
+// NewGetServerInfo200Response instantiates a new GetServerInfo200Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewGetServerInfo200Response() *GetServerInfo200Response {
+	this := GetServerInfo200Response{}
+	return &this
+}
+
+// NewGetServerInfo200ResponseWithDefaults instantiates a new GetServerInfo200Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewGetServerInfo200ResponseWithDefaults() *GetServerInfo200Response {
+	this := GetServerInfo200Response{}
+	return &this
+}
+
+// GetVersion returns the Version field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *GetServerInfo200Response) GetVersion() interface{} {
+	if o == nil {
+		var ret interface{}
+		return ret
+	}
+	return o.Version
+}
+
+// GetVersionOk returns a tuple with the Version field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *GetServerInfo200Response) GetVersionOk() (*interface{}, bool) {
+	if o == nil || isNil(o.Version) {
+		return nil, false
+	}
+	return &o.Version, true
+}
+
+// HasVersion returns a boolean if a field has been set.
+func (o *GetServerInfo200Response) HasVersion() bool {
+	if o != nil && isNil(o.Version) {
+		return true
+	}
+
+	return false
+}
+
+// SetVersion gets a reference to the given interface{} and assigns it to the Version field.
+func (o *GetServerInfo200Response) SetVersion(v interface{}) {
+	o.Version = v
+}
+
+func (o GetServerInfo200Response) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o GetServerInfo200Response) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Version != nil {
+		toSerialize["version"] = o.Version
+	}
+	return toSerialize, nil
+}
+
+type NullableGetServerInfo200Response struct {
+	value *GetServerInfo200Response
+	isSet bool
+}
+
+func (v NullableGetServerInfo200Response) Get() *GetServerInfo200Response {
+	return v.value
+}
+
+func (v *NullableGetServerInfo200Response) Set(val *GetServerInfo200Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableGetServerInfo200Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableGetServerInfo200Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableGetServerInfo200Response(val *GetServerInfo200Response) *NullableGetServerInfo200Response {
+	return &NullableGetServerInfo200Response{value: val, isSet: true}
+}
+
+func (v NullableGetServerInfo200Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableGetServerInfo200Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
